--- a/QualityApps/QualityApps/QualityApps.vbproj
+++ b/QualityApps/QualityApps/QualityApps.vbproj
@@ -213,6 +213,12 @@
     <Compile Include="Form\DialogActivityLog.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\DialogActivityLogNew.Designer.vb">
+      <DependentUpon>DialogActivityLogNew.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\DialogActivityLogNew.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\DialogAnnouncement.Designer.vb">
       <DependentUpon>DialogAnnouncement.vb</DependentUpon>
     </Compile>
@@ -413,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\DialogActivityLog.resx">
       <DependentUpon>DialogActivityLog.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\DialogActivityLogNew.resx">
+      <DependentUpon>DialogActivityLogNew.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\DialogAnnouncement.resx">
       <DependentUpon>DialogAnnouncement.vb</DependentUpon>
