--- a/QualityApps/QualityApps/bin/x64/Debug/QualityApps.exe.config
+++ b/QualityApps/QualityApps/bin/x64/Debug/QualityApps.exe.config
@@ -25,6 +25,15 @@
             <setting name="oExConDev" serializeAs="String">
                 <value>ODBC;DSN=PostgreSQLhon14nt;</value>
             </setting>
+            <setting name="Local" serializeAs="String">
+                <value>host=localhost;port=5433;database=LogisticDb20190909;CommandTimeout=10000;TimeOut=1024;</value>
+            </setting>
+            <setting name="Live" serializeAs="String">
+                <value>host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;</value>
+            </setting>
+            <setting name="Test" serializeAs="String">
+                <value>host=172.22.13.190;port=5433;database=LogisticDb20190909;CommandTimeout=10000;TimeOut=1024;</value>
+            </setting>
         </QualityApps.My.MySettings>
     </userSettings>
 </configuration>
