--- a/QualityApps/QualityApps/bin/x64/Release/QualityApps.vshost.exe.config
+++ b/QualityApps/QualityApps/bin/x64/Release/QualityApps.vshost.exe.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="QualityApps.My.MySettings.PostgreSQLCon" connectionString="host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;" />
+        <add name="QualityApps.My.MySettings.PostgreSQLCon" connectionString="host=localhost;port=5433;database=LogisticDb20200406;CommandTimeout=10000;TimeOut=1024;" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
@@ -26,7 +26,7 @@
                 <value>ODBC;DSN=PostgreSQLhon14nt;</value>
             </setting>
             <setting name="Local" serializeAs="String">
-                <value>host=localhost;port=5433;database=LogisticDb20190909;CommandTimeout=10000;TimeOut=1024;</value>
+                <value>host=localhost;port=5433;database=LogisticDb20200406;CommandTimeout=10000;TimeOut=1024;</value>
             </setting>
             <setting name="Live" serializeAs="String">
                 <value>host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;</value>
