--- a/QualityApps/QualityApps/My Project/Settings.settings
+++ b/QualityApps/QualityApps/My Project/Settings.settings
@@ -5,9 +5,9 @@
     <Setting Name="PostgreSQLCon" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;host=localhost;port=5433;database=LogisticDb20200406;CommandTimeout=10000;TimeOut=1024;&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;</Value>
+      <Value Profile="(Default)">host=localhost;port=5433;database=LogisticDb20200406;CommandTimeout=10000;TimeOut=1024;</Value>
     </Setting>
     <Setting Name="oExCon" Type="System.String" Scope="User">
       <Value Profile="(Default)">ODBC;DSN=PostgreSQLhon03nt;</Value>
