--- a/QualityApps/QualityApps/bin/x86/Debug/QualityApps.vshost.exe.config
+++ b/QualityApps/QualityApps/bin/x86/Debug/QualityApps.vshost.exe.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="QualityApps.My.MySettings.PostgreSQLCon" connectionString="host=hon14nt;port=5432;database=LogisticDb;CommandTimeout=10000;TimeOut=1024;" />
+        <add name="QualityApps.My.MySettings.PostgreSQLCon" connectionString="host=localhost;port=5433;database=LogisticDb20200406;CommandTimeout=10000;TimeOut=1024;" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
